tests/derive_ui/value_enum_on_struct.stderr
error: `#[derive(ValueEnum)]` only supports enums
 --> tests/derive_ui/value_enum_on_struct.rs:3:10
  |
3 | #[derive(ValueEnum, Clone, Debug)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `ValueEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
