tests/derive_ui/value_enum_on_struct.rs
use clap::ValueEnum;

#[derive(ValueEnum, Clone, Debug)]
struct Opt {}

fn main() {
    println!("{:?}", Opt::value_variants());
}
